syntax = "proto2";

message ProtocolMessage {
  extensions 6 to max;

  // TODO: These definitions are very verbose and will probably change them later
  enum ErrorCode {
    NO_ERROR = 0;
    INVALID_OPERATION = 2;
    OPERATION_NOT_PERMITTED = 3;
    CLIENT_DOES_NOT_EXIST = 4;
    ORIGIN_DOES_NOT_EXIST = 5;
    UNSUPPORTED_OPERATION = 6;
    FAILED_TO_SET_PICKED_ROUTE = 7;
    FAILED_TO_REGISTER_CUSTOM_ORIGIN = 8;
    FAILED_TO_REMOVE_CUSTOM_ORIGIN = 9;
    THE_APPLICATION_ACTIVITY_DOES_NOT_EXIST = 10;
    THE_APP_HAS_NOT_SETUP_A_BROWSABLE_CONTENT_ENDPOINT = 11;
    THE_REQUESTED_BROWSABLE_CONTENT_API_IS_NOT_SUPPORTED_BY_THE_APPLICATION = 12;
    THE_NOTFICATION_HAS_NOT_BEEN_WHITELISTED_BY_THE_SERVER = 13;
    OPERATION_REQUIRES_A_CLIENT_CALLBACK_TO_HAVE_BEEN_REGISTERED = 14;
    OPERATION_REQUIRES_A_CLIENT_DATA_SOURCE_TO_HAVE_BEEN_REGISTERED = 15;
    REQUESTED_DATA_IS_OUT_OF_DATE_AND_SHOULD_BE_REQUESTED_AGAIN = 16;
    THE_DEVICES_ENFORCED_VOLUME_LIMIT_HAS_BEEN_EXCEEDED = 17; // The system will ignore the volume adjustment until overridden.
    VOLUME_VALUE_IS_OUT_OF_RANGE = 18; // between 0.0 and 1.0, where 1.0 is the loudest
    VOLUME_IS_ALREADY_AT_THE_MAXIMUM_VALUE = 19;
    VOLUME_IS_ALREADY_MUTED = 20;
    VOICE_INPUT_ENDPOINT_DOES_NOT_EXIST = 21;
    THE_VOICE_INPUT_DEVICE_IS_NOT_REGISTERED_OR_DOES_NOT_EXIST = 22;
    ENCRYPTION_FAILURE = 23;
    ENDPOINT_DOES_NOT_EXIST = 24;
    THE_CLIENTS_APPLICATION_CANCELLED_THE_OPERATION = 25;
    THE_OPERATION_TIMED_OUT = 26;
    THE_SPECIFIED_PLAYER_PATH_OBJECT_WAS_INVALID = 27;
    ADDING_OR_REMOVING_DEVICES_FROM_THE_AV_OUTPUT_CONTEXT_HAS_FAILED = 28;
    COULD_NOT_FIND_THE_SPECIFIED_NOW_PLAYING_PLAYER = 29;
    THE_SPECIFIED_CONTENT_ITEM_DOES_NOT_EXIST = 30;
    THE_SPECIFIED_OFFSET_IS_INVALID = 31;
    THE_SPECIFIED_OUTPUT_CONTEXT_IS_INVALID = 32;
    ONE_OR_MORE_SPECIFIED_OUTPUT_DEVICES_ARE_NOT_GROUPABLE = 33;
    THE_SPECIFIED_OUTPUT_CONTEXT_DOES_NOT_SUPPORT_ADDING_MORE_THAN_ONE_OUTPUT_DEVICE = 34;
    COULD_NOT_FIND_THE_SPECIFIED_NOW_PLAYING_CLIENT = 35;
    ENDPOINT_VOLUME_CONTROL_IS_ONLY_POSSIBLE_IF_THE_ENDPOINT_IS_PICKED_OR_REMOTE_CONTROLLABLE = 36;
    OUTPUT_DEVICE_VOLUME_CONTROL_IS_ONLY_POSSIBLE_IF_THE_ENDPOINT_IS_PICKED_OR_REMOTE_CONTROLLABLE = 37;
    CODER_MUST_SUPPORT_KEY_VALUE_CODING = 38;
    COULD_NOT_FIND_THE_GIVEN_OUTPUTDEVICE = 39;

    FAILED_TO_CONNECT_TO_REMOTE_DEVICE = 100;
    AUTHENTICATION_TOKEN_IS_INVALID = 101;
    RECORDING_SESSION_IS_ALREADY_IN_PROGRESS_ON_THIS_DEVICE = 102;
    THE_DEVICE_IS_NOT_CURRENTLY_RECORDING = 103;
    THE_CLIENT_HAS_DISCONNECTED = 104;
    THE_SERVER_HAS_DISCONNECTED = 105;
    THE_CONNECTION_HAS_BEEN_CANCELLED_BY_THE_CLIENT = 106;
    PAIRING_FUNCTIONALITY_IS_LOCKED_DUE_TO_SECURITY_REASONS = 107;
    THE_CLIENTS_OPERATING_SYSTEM_VERSION_IS_TOO_OLD = 108;
    THE_CLIENTS_APPLICATION_VERSION_IS_TOO_OLD = 109;
    THE_DEVICE_IS_NOT_PAIRED = 110;
    THE_PIN_PAIRING_DIALOG_WAS_REMOVED_BY_THE_USER_BEFORE_PAIRING_OCCOURED = 111;
    THE_PIN_PAIRING_DIALOG_WAS_REMOVED_BY_A_TIMEOUT_BEFORE_PAIRING_OCCOURED = 112;
    THE_CONNECTION_TIMEDOUT = 113;
    PAIRING_WITH_THIS_DEVICE_IS_BLOCKED = 114;
    THE_DEVICE_IS_GOING_TO_SLEEP = 115;
    CONNECTION_BLOCKED_BY_SERVER = 116;
    MRAVENDPOINT_WAS_DEALLOCATED_WHILE_WAITING_FOR_DEVICE_TO_CONNECT = 117;

    OUTPUT_CONTEXT_MODIFICATION_CAUSED_A_DEVICE_TO_NO_LONGER_BE_A_PROXY_GROUP_PLAYER = 200;
    OUTPUT_CONTEXT_MODIFICATION_CAUSED_A_DEVICE_TO_BECOME_A_PROXY_GROUP_PLAYER = 201;
    OUTPUT_CONTEXT_MODIFICATION_REQUESTED_NO_TOPOLOGY_CHANGE = 202;

    UNKNOWN_ERROR = 299;
  }

  enum Type {
    UNKNOWN_MESSAGE = 0;
    SEND_COMMAND_MESSAGE = 1;
    SEND_COMMAND_RESULT_MESSAGE = 2;
    GET_STATE_MESSAGE = 3;
    SET_STATE_MESSAGE = 4;
    SET_ARTWORK_MESSAGE = 5;
    REGISTER_HID_DEVICE_MESSAGE = 6;
    REGISTER_HID_DEVICE_RESULT_MESSAGE = 7;
    SEND_HID_EVENT_MESSAGE = 8;
    SEND_HID_REPORT_MESSAGE = 9;
    SEND_VIRTUAL_TOUCH_EVENT_MESSAGE = 10;
    NOTIFICATION_MESSAGE = 11;
    CONTENT_ITEMS_CHANGED_NOTIFICATION_MESSAGE = 12;
    DEVICE_INFO_MESSAGE = 15; 
    CLIENT_UPDATES_CONFIG_MESSAGE = 16;
    VOLUME_CONTROL_AVAILABILITY_MESSAGE = 17;
    GAME_CONTROLLER_MESSAGE = 18;
    REGISTER_GAME_CONTROLLER_MESSAGE = 19;
    REGISTER_GAME_CONTROLLER_RESPONSE_MESSAGE = 20;
    UNREGISTER_GAME_CONTROLLER_MESSAGE = 21;
    REGISTER_FOR_GAME_CONTROLLER_EVENTS_MESSAGE = 22;
    KEYBOARD_MESSAGE = 23;
    GET_KEYBOARD_SESSION_MESSAGE = 24;
    TEXT_INPUT_MESSAGE = 25;
    GET_VOICE_INPUT_DEVICES_MESSAGE = 26;
    GET_VOICE_INPUT_DEVICES_RESPONSE_MESSAGE = 27;
    REGISTER_VOICE_INPUT_DEVICE_MESSAGE = 28;
    REGISTER_VOICE_INPUT_DEVICE_RESPONSE_MESSAGE = 29;
    SET_RECORDING_STATE_MESSAGE = 30;
    SEND_VOICE_INPUT_MESSAGE = 31;
    PLAYBACK_QUEUE_REQUEST_MESSAGE = 32;
    TRANSACTION_MESSAGE = 33;
    CRYPTO_PAIRING_MESSAGE = 34; 
    GAME_CONTROLLER_PROPERTIES_MESSAGE = 35;
    SET_READY_STATE_MESSAGE = 36;
    DEVICE_INFO_UPDATE_MESSAGE = 37;
    SET_CONNECTION_STATE_MESSAGE = 38;
    SEND_BUTTON_EVENT = 39;
    SET_HILITE_MODE_MESSAGE = 40;
    WAKE_DEVICE_MESSAGE = 41;
    GENERIC_MESSAGE = 42;
    SEND_PACKED_VIRTUAL_TOUCH_EVENT_MESSAGE = 43;
    SEND_LYRICS_EVENT = 44;
    SET_NOW_PLAYING_CLIENT_MESSAGE = 46;
    SET_NOT_PLAYING_PLAYER_MESSAGE = 47;
    UPDATE_CLIENT_MESSAGE = 55;
    UPDATE_CONTENT_ITEM_MESSAGE = 56;
    UPDATE_OUTPUT_DEVICE_MESSAGE = 65;
    SET_DEFAULT_SUPPORTED_COMMANDS_MESSAGE = 72;
  }

  optional Type type = 1; // Identifies which underlying message is filled in.
  optional string identifier = 2;
  optional string authenticationToken = 3;
  optional ErrorCode errorCode = 4;
  optional uint64 timestamp = 5;
}
